# OpenComputersWasm

./: .gitignore  Cargo.toml  LICENSE-forge.txt  README.txt  build.gradle  gradle.properties
src/: java_encapsulation.rs  lib.rs
src/main/java/com/thecarl/ocwasm/: OCWasm.java  WasmArch.java
src/main/resources/: mcmod.info  pack.mcmeta
wasm-interpreter/: Cargo.toml
wasm-interpreter/src/: lib.rs
