[package]
name = "wasm-interpreter"
version = "0.1.0"
authors = ["I am the Carl <jamescarl96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.16.0"
wasmer = "0.1.0"
slotmap = "0.4.0"

[lib]
crate_type=["cdylib"]